# school_projects

./: .gitignore  Makefile  README.md
sem_2/ijc/proj_1/: Makefile  bit_array.h  eratosthenes.c  eratosthenes.h  error.c  error.h  ppm.c  ppm.h  primes.c  steg-decode.c
sem_2/ijc/proj_2/: Makefile  htab.h  htab_bucket_count.c  htab_clear.c  htab_find.c  htab_foreach.c  htab_free.c  htab_hash_function.c  htab_init.c  htab_lookup_add.c  htab_move.c  htab_remove.c  htab_size.c  io.c  io.h  tail.c  tail2.cc  wordcount.c
sem_2/ios/proj_1/: wedi
sem_2/ios/proj_2/: Makefile  proj2.c
sem_3/ial/proj_1/c201/: c201.c
sem_3/ial/proj_1/c203/: c203.c
sem_3/ial/proj_1/c206/: c206.c
sem_3/ial/proj_2/c016/: c016.c
sem_3/ial/proj_2/c401/: c401.c  c401.h
sem_3/ial/proj_2/c402/: c402.c
sem_3/ips/proj_1/: psed.c
sem_3/ips/proj_2/: mmal.c
sem_5/ili/: xvavro05-fit-ili.sh
sem_5/isa/proj/: .gitignore  CMakeLists.txt  Makefile  d6r  d6r.1  d6r.cpp  d6r.h  xvavro05.tar
sem_6/ipk/: Makefile  readme.md
sem_6/ipk/proj1/: readme.md
sem_6/ipk/proj1/src/: Handler.java  Main.java  Request.java  Server.java
sem_6/ipk/proj2/: CMakeLists.txt  Makefile  README.md  ipk-sniffer.cpp  ipk-sniffer.h
sem_6/ipk/src/: DnsRequest.java  Handler.java  Main.java  Request.java  Response.java  Server.java
sem_6/itw/proj1/: gulpfile.js  itw1.css  itw1.scss  package-lock.json
sem_6/itw/proj2/: README.txt  index.html  itw2.css  proj2.js
